[gd_scene load_steps=2 format=3 uid="uid://7nc6v2vxj8hk"]

[ext_resource type="Script" uid="uid://118827gmjncx" path="res://components/MouseHide.gd" id="1_tvll0"]

[node name="MouseHide" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_tvll0")

[node name="HideTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true
ignore_time_scale = true

[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="timeout" from="HideTimer" to="." method="_on_hide_timer_timeout"]
